--- a/project/books/templates/books/booktarget_form.html
+++ b/project/books/templates/books/booktarget_form.html
@@ -1,2 +1,4 @@
-{% load form %}{% load i18n %}
-{% generic_form title='Tikslas metams' %}
+{% load form %}
+{% load i18n %}
+
+{% generic_form title=_('Goal for the year') %}
