--- a/project/incomes/templates/incomes/includes/incomes_list.html
+++ b/project/incomes/templates/incomes/includes/incomes_list.html
@@ -17,8 +17,8 @@
     </thead>
     <tbody>
         {% for item in items %}
-        {% url 'incomes:incomes_update' item.id as url_update %}
-        {% url 'incomes:incomes_delete' item.id as url_delete %}
+        {% url 'incomes:update' item.id as url_update %}
+        {% url 'incomes:delete' item.id as url_delete %}
         {% ifchanged item.date|date:"F" %}{% if not forloop.first %}<tr><td colspan="7" class="table-active"></td></tr>{% endif %}
         {% endifchanged %}
         <tr data-url="{{ url_update }}" class="dblclick">
