--- a/project/incomes/templates/incomes/index.html
+++ b/project/incomes/templates/incomes/index.html
@@ -19,8 +19,8 @@
 <!-- Loader -->
 <div class="loader loader-default" id="loader"></div>
 
-{% url 'incomes:incomes_new' as url_incomes %}
-{% url 'incomes:incomes_type_new' as url_incomes_type_new %}
+{% url 'incomes:new' as url_incomes %}
+{% url 'incomes:type_new' as url_type_new %}
 <div class="row gx-2">
     <div class="col-lg-8">
         <div class="row my-2">
@@ -37,7 +37,7 @@
     <div class="col-lg-4">
         <div class="row my-2">
             <div class="col-lg-12 text-end">
-                <button type="button" class="btn btn-sm btn-outline-success" data-url="{{ url_incomes_type_new }}"><i class="bi bi-plus"></i>{% translate 'Incomes type' context 'income type button' %}</button>
+                <button type="button" class="btn btn-sm btn-outline-success" data-url="{{ url_type_new }}"><i class="bi bi-plus"></i>{% translate 'Incomes type' context 'income type button' %}</button>
             </div>
         </div>
 
