--- a/project/incomes/templates/incomes/income_list.html
+++ b/project/incomes/templates/incomes/income_list.html
@@ -2,7 +2,7 @@
 {% load i18n %}
 {% load slippers %}
 
-{% if items %}
+{% if object_list %}
 
 <table class="table table-striped table-hover stats">
     <thead class="thead-light">
@@ -16,17 +16,17 @@
          </tr>
     </thead>
     <tbody>
-        {% for item in items %}
-        {% url 'incomes:update' item.id as url_update %}
-        {% url 'incomes:delete' item.id as url_delete %}
-        {% ifchanged item.date|date:"F" %}{% if not forloop.first %}<tr><td colspan="7" class="table-active"></td></tr>{% endif %}
+        {% for object in object_list %}
+        {% url 'incomes:update' object.id as url_update %}
+        {% url 'incomes:delete' object.id as url_delete %}
+        {% ifchanged object.date|date:"F" %}{% if not forloop.first %}<tr><td colspan="7" class="table-active"></td></tr>{% endif %}
         {% endifchanged %}
         <tr data-url="{{ url_update }}" class="dblclick">
-            <td class="text-start">{{ item.date|date:"Y-m-d" }}</td>
-            <td class="text-start">{{ item.income_type }}</td>
-            <td class="text-start">{{ item.account }}</td>
-            <td class="text-start">{{ item.remark }}</td>
-            <td>{{ item.price|intcomma }}</td>
+            <td class="text-start">{{ object.date|date:"Y-m-d" }}</td>
+            <td class="text-start">{{ object.income_type }}</td>
+            <td class="text-start">{{ object.account }}</td>
+            <td class="text-start">{{ object.remark }}</td>
+            <td>{{ object.price|intcomma }}</td>
             {% edit_cell url=url_update %}
             {% delete_cell url=url_delete %}
         </tr>
@@ -34,7 +34,7 @@
     </tbody>
 </table>
 
-{% paging url=url page_obj=items page_range=page_range search=search %}
+{% paging url=url page_obj=object_list page_range=page_range search=search %}
 
 {% else %}
 
