--- a/project/incomes/templates/incomes/incometype_list.html
+++ b/project/incomes/templates/incomes/incometype_list.html
@@ -6,11 +6,10 @@
         </div>
         <div id="collapse_1" class="accordion-collapse collapse show" aria-labelledby="heading_1" data-bs-parent="#accordion">
             <div class="accordion-body">
-                {% for item in items %}
-                {% url 'incomes:type_update' item.id as url_update %}
-                <div class="list-group-item" data-url="{{ url_update }}">{{ item.title }}
+                {% for object in object_list %}
+                <div class="list-group-item">{{ object.title }}
                     <span class="edit-icon">
-                        <button type="button" data-url="{{ url_update }}" class="btn btn-super-sm edit"><i class="bi bi-pencil-fill"></i></button>
+                        <button type="button" hx-get="{% url 'incomes:type_update' object.pk %}" hx-target="#dialog" class="btn btn-super-sm edit"><i class="bi bi-pencil-fill"></i></button>
                     </span>
                 </div>
                 {% endfor %}
