rename pensions and savins urls

--- a/project/bookkeeping/templates/bookkeeping/month.html
+++ b/project/bookkeeping/templates/bookkeeping/month.html
@@ -111,16 +111,11 @@
         </div>
     </div>
     <div class="col-lg-4 my-sm-2 my-lg-0 gx-2 text-end">
-        {% url 'expenses:expenses_new' as url_expenses_new %}
-        <button type="button" class="btn btn-sm btn-outline-success" data-url="{{ url_expenses_new }}"> <i class="bi bi-plus"></i>{% translate 'Expenses' context "expenses button" %}</button>
-        {% url 'incomes:new' as url_new %}
-        <button type="button" class="btn btn-sm btn-outline-success" data-url="{{ url_new }}"> <i class="bi bi-plus"></i>{% translate 'Incomes' context "incomes button" %}</button>
-        {% url 'savings:savings_new' as url_savings_new %}
-        <button type="button" class="btn btn-sm btn-outline-success" data-url="{{ url_savings_new }}"> <i class="bi bi-plus"></i>{% translate 'Savings' context "savings button" %}</button>
-        {% url 'transactions:transactions_new' as url_transactions_new %}
-        <button type="button" class="btn btn-sm btn-outline-success" data-url="{{ url_transactions_new }}"> <i class="bi bi-plus"></i>{% translate 'Transactions' context 'transactions button' %}</button>
-        {% url 'drinks:drinks_new' as url_drinks_new %}
-        <button type="button" class="btn btn-sm btn-outline-success" data-url="{{ url_drinks_new }}"><i class="bi bi-plus"></i>{% translate 'Drinks' context 'drinks button' %}</button>
+        <button type="button" class="btn btn-sm btn-outline-success" data-url="{% url 'expenses:expenses_new' %}"> <i class="bi bi-plus"></i>{% translate 'Expenses' context "expenses button" %}</button>
+        <button type="button" class="btn btn-sm btn-outline-success" data-url="{% url 'incomes:new' %}"> <i class="bi bi-plus"></i>{% translate 'Incomes' context "incomes button" %}</button>
+        <button type="button" class="btn btn-sm btn-outline-success" data-url="{% url 'savings:new' %}"> <i class="bi bi-plus"></i>{% translate 'Savings' context "savings button" %}</button>
+        <button type="button" class="btn btn-sm btn-outline-success" data-url="{% url 'transactions:transactions_new' %}"> <i class="bi bi-plus"></i>{% translate 'Transactions' context 'transactions button' %}</button>
+        <button type="button" class="btn btn-sm btn-outline-success" data-url="{% url 'drinks:drinks_new' %}"><i class="bi bi-plus"></i>{% translate 'Drinks' context 'drinks button' %}</button>
         <button class="btn btn-sm btn-info" onclick="myFunction()">{% translate 'Show other chart' %}</button>
     </div>
 </div>
