--- a/project/savings/templates/savings/index.html
+++ b/project/savings/templates/savings/index.html
@@ -6,10 +6,10 @@
 
 {% block content %}
 
-{% url 'savings:savings_new' as url_savings %}
-{% url 'savings:savings_type_new' as url_savings_type_new %}
-{% url 'pensions:pensions_new' as url_pensions %}
-{% url 'pensions:pensions_type_new' as url_pensions_type_new %}
+{% url 'savings:new' as url_savings %}
+{% url 'savings:type_new' as url_savings_type_new %}
+{% url 'pensions:new' as url_pensions %}
+{% url 'pensions:type_new' as url_pensions_type_new %}
 <div class="row gx-2">
     <div class="col-lg-8">
         <!-- Funds -->
