--- a/project/savings/templates/savings/saving_list.html
+++ b/project/savings/templates/savings/saving_list.html
@@ -18,8 +18,8 @@
     </thead>
     <tbody>
         {% for item in items %}
-        {% url 'savings:savings_update' item.id as url_update %}
-        {% url 'savings:savings_delete' item.id as url_delete %}
+        {% url 'savings:update' item.id as url_update %}
+        {% url 'savings:delete' item.id as url_delete %}
         {% ifchanged item.date|date:"F" %}{% if not forloop.first %}<tr><td colspan="8" class="table-active"></td></tr>{% endif %}
         {% endifchanged %}
         <tr data-url="{{ url_update }}" class="dblclick">
