highlight savings menu

--- a/project/templates/base.html
+++ b/project/templates/base.html
@@ -87,7 +87,7 @@
           </li>
 
           <li class="nav-item">
-            <a class="nav-link {% if request.resolver_match.url_name == 'index' %}active{% endif %}" href="{% url 'savings:index' %}">{% translate 'Savings' %}</a>
+            <a class="nav-link {% if '/savings/' in request.path %}active{% endif %}" href="{% url 'savings:index' %}">{% translate 'Savings' %}</a>
           </li>
 
           <li class="nav-item">
