--- a/project/bookkeeping/templates/bookkeeping/month.html
+++ b/project/bookkeeping/templates/bookkeeping/month.html
@@ -111,7 +111,7 @@
         </div>
     </div>
     <div class="col-lg-4 my-sm-2 my-lg-0 gx-2 text-end">
-        <button type="button" class="btn btn-sm btn-outline-success" data-url="{% url 'expenses:expenses_new' %}"> <i class="bi bi-plus"></i>{% translate 'Expenses' context "expenses button" %}</button>
+        <button type="button" class="btn btn-sm btn-outline-success" data-url="{% url 'expenses:new' %}"> <i class="bi bi-plus"></i>{% translate 'Expenses' context "expenses button" %}</button>
         <button type="button" class="btn btn-sm btn-outline-success" data-url="{% url 'incomes:new' %}"> <i class="bi bi-plus"></i>{% translate 'Incomes' context "incomes button" %}</button>
         <button type="button" class="btn btn-sm btn-outline-success" data-url="{% url 'savings:new' %}"> <i class="bi bi-plus"></i>{% translate 'Savings' context "savings button" %}</button>
         <button type="button" class="btn btn-sm btn-outline-success" data-url="{% url 'transactions:transactions_new' %}"> <i class="bi bi-plus"></i>{% translate 'Transactions' context 'transactions button' %}</button>
