--- a/project/core/templates/core/includes/generic_form.html
+++ b/project/core/templates/core/includes/generic_form.html
@@ -1,7 +1,7 @@
 {% load crispy_forms_tags %}
 {% load i18n %}
 
-<form method="POST" hx-post="{{ url }}" hx-headers='{"X-CSRFToken":"{{ csrf_token }}"}' hx-encoding="multipart/form-data" id="js_form" class="js_form modal-content" novalidate autocomplete="off" tabindex="-1" {% if chained_dropdown %}data-chained-dropdown="{{ chained_dropdown }}"{% endif %}>
+<form method="POST" hx-post="{{ url }}" hx-headers='{"X-CSRFToken":"{{ csrf_token }}"}' hx-encoding="multipart/form-data" id="js_form" class="js_form modal-content" novalidate autocomplete="off" tabindex="-1">
     {% csrf_token %}
     {% include 'core/includes/form_date_scripts.html' %}
     <div class="modal-header">
@@ -16,6 +16,7 @@
         <div class="row">
             <div class="col-4">{{ field.label_tag }}</div>
             <div class="col-8">
+            <!-- add price field -->
             {% if field.html_name == 'total_sum' %}
             <div class="row gx-2">
                 <div class="col">{{ field|as_crispy_field }}</div>
@@ -23,7 +24,8 @@
             </div>
             {% else %}
             {{ field|as_crispy_field }}
-            {% endif %}</div>
+            {% endif %}
+            </div>
         </div>
         {% endif %}
         {% endfor %}
