--- a/project/expenses/templates/expenses/expense_form.html
+++ b/project/expenses/templates/expenses/expense_form.html
@@ -1,10 +1,9 @@
 {% load form %}
 {% load i18n %}
 
-{% url 'expenses:load_expense_name' as chained_url %}
 {% translate "Expenses" context "expenses form title" as form_title %}
 
-{% generic_form title=form_title chained_dropdown=chained_url %}
+{% generic_form title=form_title %}
 
 <script>
     // on escape key hide modal form
@@ -49,21 +48,4 @@
         }
     });
 
-
-    // expense type dropdown event
-    $("#id_expense_type").change(function () {
-        var url = $("#js_form").attr("data-chained-dropdown");
-        var expense_typeId = $(this).val();
-
-        $.ajax({
-            url: url,
-            data: {
-                'expense_type': expense_typeId
-            },
-            success: function (data) {
-                $("#id_expense_name").html(data);
-            }
-        });
-
-    });
 </script>
