--- a/project/plans/templates/plans/includes/savings_plan_form.html
+++ b/project/plans/templates/plans/includes/savings_plan_form.html
@@ -1,4 +1,4 @@
 {% load form %}
 {% load i18n %}
 
-{% generic_form title=_('Savings plans') chained_dropdown='plans_stats' %}
+{% generic_form title=_('Savings plans') %}
