--- a/project/transactions/templates/transactions/includes/savings_change_form.html
+++ b/project/transactions/templates/transactions/includes/savings_change_form.html
@@ -1,22 +1,4 @@
 {% load form %}
 {% load i18n %}
 
-{% url 'transactions:load_saving_type' as url_chained %}
-{% generic_form title=_('Fund &hArr; Fund') chained_dropdown=url_chained %}
-
-<script>
-    $("#id_from_account").change(function () {
-        var url = $("#js_form").attr("data-chained-dropdown");
-        var id = $(this).val();
-
-        $.ajax({
-            url: url,
-            data: {
-                'id': id
-            },
-            success: function (data) {
-                $("#id_to_account").html(data);
-            }
-        });
-    });
-</script>
+{% generic_form title=_('Fund &hArr; Fund') %}
