--- a/project/transactions/templates/transactions/includes/transactions_form.html
+++ b/project/transactions/templates/transactions/includes/transactions_form.html
@@ -2,24 +2,6 @@
 {% load static %}
 {% load i18n %}
 
-{% url 'accounts:load_to_account' as url_chained %}
-{% generic_form title=_('Transaction') chained_dropdown=url_chained %}
-
-<script>
-    $("#id_from_account").change(function () {
-        var url = $("#js_form").attr("data-chained-dropdown");
-        var id = $(this).val();
-
-        $.ajax({
-            url: url,
-            data: {
-                'id': id
-            },
-            success: function (data) {
-                $("#id_to_account").html(data);
-            }
-        });
-    });
-</script>
+{% generic_form title=_('Transaction') %}
 
 <script src="{% static 'js/alter_price.js' %}"></script>
