--- a/project/expenses/templates/expenses/expense_form.html
+++ b/project/expenses/templates/expenses/expense_form.html
@@ -32,7 +32,7 @@
         sum_prices();
     });
 
-
+    // Enter key on price field
     var input = document.getElementById("id_total_sum");
     input.addEventListener("keyup", function (event) {
         event.preventDefault();
@@ -41,4 +41,12 @@
         }
     });
 
+    // disable Enter key on form
+    document.addEventListener('keypress', function (e) {
+            if (e.keyCode === 13 || e.which === 13) {
+                e.preventDefault();
+                return false;
+            }
+
+        });
 </script>
